angular add ngfor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1>projet angular</h1>
+
 <app-nav-bar></app-nav-bar>
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+<app-register></app-register>
 <app-footer></app-footer>
 
 
