--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,69 @@
-<p>login works!</p>
+<div  style="margin-bottom: 150px;"></div>
+<div class="row">
+    <div class="offset-sm-3 col-sm-6"><form>
+        <div class="form-group ">
+          <label for="emailLabel">Email address</label>
+          <input type="email" class="form-control is-valid" [(ngModel)]="email" name="email" id="emailLabel" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="Password">Password</label>
+          <input type="password"  [(ngModel)]="password" name="password" class="form-control is-invalid" id="Password" placeholder="Password">
+        </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </div>
+  <p >{{email}}</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+<!-- <div class="col-md-5 justify-content-md-center">
+<form class="left">
+    <div class="form-group ">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form> -->
+
+
+
+  <!-- <p>{{email}}</p>
+  <p>{{age}}</p>
+  <p>{{user.name + "  "+ email}}</p>
+
+  <p>{{5+5}}</p>
+  <img [src]="{{url}}">
+<button type="button" (click)="register">cleck here</button> --> 
