--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,2 +1,12 @@
-<p class="badge badge-success">nav-bar works!</p>
+<nav class="navbar ">
+  <a class="navbar"></a>
+  <form class="form-inline">
+    <!-- <button class="btn btn-outline-light my-2 my-sm-0" type="submit">SignIn</button> -->
+    <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="button">Main button</button> -->
+
+      <button type="button" class="btn btn-success">SignUp</button>
+      <button type="button" class="btn btn-danger">SignIn</button>
+    
+  </form>
+  </nav>
 
