--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -96,7 +96,7 @@
     </div>
   </div>
 </div>  -->
- <!-- <table class="table tabe-hover table-striped table-bordered">
+ <table class="table tabe-hover table-striped table-bordered">
   <thead class="table-dark">
   <tr>
     <th>Name</th>
@@ -113,7 +113,7 @@
     <td>{{user.email}}</td>
   </tr>
 </tbody>
-</table>  -->
+</table> 
 
 
 
