--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -12,7 +12,7 @@
       <td>{{user.firstname}}</td>
       <td>{{user.lastname}}</td>
       <td><button type="button" class="btn btn-secondary"(click)="updateUser(i)" >Update</button></td>
-      <td><button type="button" class="btn btn-danger" (click)="DeleteUser(i)">Delete</button></td>
+      <td><button type="button" class="btn btn-danger" (click)="deleteUser(i)">Delete</button></td>
     </tr>
   </tbody>
   </table> 
