--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     <!-- <button class="btn btn-outline-light my-2 my-sm-0" type="submit">SignIn</button> -->
     <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="button">Main button</button> -->
 
-      <button type="button" class="btn btn-success">SignUp</button>
+      <button type="button" class="btn btn-success">SignUp</button>&nbsp;
       <button type="button" class="btn btn-danger">SignIn</button>
     
   </form>
