--- a/src/app/task-update/task-update.component.html
+++ b/src/app/task-update/task-update.component.html
@@ -1,30 +1,54 @@
+<!-- <div *ngIf="shouldShowTitleRequiredError()">Title is required.</div>
 <div class="container">
-  <form class="form">
-    <div class="row">
+  <form class="form" [formGroup]="taskForm" (ngSubmit)="submitForm()">
+    <div class="row form-group">
       <div class="col-25">
         <label for="title">Title</label>
       </div>
       <div class="col-75">
-        <input type="text" id="title" name="Tite" placeholder="Your Title..">
+        <input type="text" id="title" name="Tite" placeholder="Your Title.." />
       </div>
     </div>
-
 
     <div class="row">
       <div class="col-25">
         <label for="subject">Description</label>
       </div>
       <div class="col-75">
-        <textarea id="description" name="description" placeholder="Write something.." style="height:200px"></textarea>
+        <textarea id="description" name="description" placeholder="Write something.." style="height: 200px"></textarea>
       </div>
     </div>
-    
 
-      <div class="btn-group m-2">
-        <input type="submit" class="btn btn-success btn-lg active" value="Update"></div>
-      <div class="btn-group m-2 ">
-        <a routerLink="/tasks" class="btn btn-secondary btn-lg active">back</a>
-      </div>
-    
+    <div class="btn-group m-2">
+      <input type="submit" class="btn btn-success btn-lg active" value="Update" />
+    </div>
+    <div class="btn-group m-2">
+      <a routerLink="/tasks" class="btn btn-secondary btn-lg active">back</a>
+    </div>
   </form>
+</div> -->
+<div *ngIf="shouldShowTitleRequiredError()">Title is required.</div>
+<div class="row mtç-5 mt-5">
+    <div class="offset-3 col-sm-6">
+        <form [formGroup]="taskForm" (ngSubmit)="submitForm()" class="mt-5">
+            <div class="form-group ">
+                <input formControlName="title" name="titre" type="text" class="form-control " id="titre"
+                    placeholder="titre">
+                    <div *ngIf="shouldShowTitleRequiredError()">Title is required.</div>
+            </div>
+            <div class="form-group">
+                <textarea formControlName="description" class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="Description"></textarea>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <button type="submit" class="btn btn-success btn-block">update</button>
+                </div>
+                <div class="col-sm-6">
+                    <a routerLink="/tasks" class="btn btn-info btn-block">Retoure</a>
+                </div>
+            </div>
+
+        </form>
+    </div>
 </div>
