--- a/src/app/task-add/task-add.component.html
+++ b/src/app/task-add/task-add.component.html
@@ -1,35 +1,26 @@
-<div class="container">
-    <form class="form">
-      <div class="row">
-        <div class="col-25">
-          <label for="title">Title</label>
-        </div>
-        <div class="col-75">
-          <input type="text" id="title" name="Tite" placeholder="Your Title..">
-        </div>
-      </div>
-    
-    
-      <div class="row">
-        <div class="col-25">
-          <label for="subject">Description</label>
-        </div>
-        <div class="col-75">
-          <textarea id="description" name="description" placeholder="Write something.." style="height:200px"></textarea>
-        </div>
-      </div>
-      <div class="row btn-block mr-2">
-        <!-- <input type="submit" value="Add">
-        <a routerLink="/tasks" class="btn btn-info">back</a> -->
-        <div class="btn-group m-2">
-             <input type="submit" class="btn btn-success btn-lg active" value="Add"></div>
-             <div class="btn-group m-2 ">
-        <a routerLink="/tasks" class="btn btn-secondary btn-lg active">back</a> 
+<div *ngIf="shouldShowTitleRequiredError()">Title is required.</div>
+<div class="row mtç-5 mt-5">
+    <div class="offset-3 col-sm-6">
+        <form [formGroup]="taskForm" (ngSubmit)="submitForm()" class="mt-5">
+            <div class="form-group ">
+                <input formControlName="title" name="titre" type="text" class="form-control " id="titre"
+                    placeholder="titre">
+                    <div *ngIf="shouldShowTitleRequiredError()">Title is required.</div>
+            </div>
+            <div class="form-group">
+                <textarea formControlName="description" class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="Description"></textarea>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <button type="submit" class="btn btn-success btn-block">Ajouter</button>
+                </div>
+                <div class="col-sm-6">
+                    <a routerLink="/tasks" class="btn btn-info btn-block">Retoure</a>
+                </div>
             </div>
 
-
-      </div>
-    </form>
-  </div>
-  
+        </form>
+    </div>
+</div>
 
