--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -20,7 +20,7 @@
                   <td>{{list.description}}</td>
                     <td class="text-center">
                         <a [routerLink]="['/tasks/update/', i]" class="btn btn-secondary mr-2">Update</a>
-                        <a  class="btn btn-danger">Delete</a>
+                        <a  class="btn btn-danger"  type="submit" (click)="onDelete(i)">Delete</a>
                     </td>
                 </tr>
             </tbody>
