--- a/src/app/user-add/user-add.component.html
+++ b/src/app/user-add/user-add.component.html
@@ -1,27 +1,29 @@
-
- <div class="container">
+<div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
 
       <form>
-      <h2 class="text-center">Add user</h2> 
-      <div class="form-group">
-        <input type="text" class="form-control" [(ngModel)]="firstname" placeholder="Firste Name" name="firstname" required>
-    
-      </div>
+        <h2 class="text-center">Add user</h2>
+        <div class="form-group">
+          <input type="text" class="form-control" [(ngModel)]="firstname" placeholder="Firste Name" name="firstname"
+            required>
 
-       <div class="form-group">
-         <input type="text" class="form-control"[(ngModel)]="lastname" required placeholder="Last Name" name="lastname" required >
-      
-      </div>
+        </div>
+
+        <div class="form-group">
+          <input type="text" class="form-control" [(ngModel)]="lastname" required placeholder="Last Name"
+            name="lastname" required>
+
+        </div>
 
 
-          <div class="text-center">
-              <button type="submit" class="btn-btn-primary" *ngIf="!showdDownButton"   (click)="addUser()">Register</button>
-              <button class="btn-btn-primary" *ngIf="showdDownButton" (click)="editUser(i)">Edit</button>
-          </div>
-    </form>
+        <div class="text-center">
+          <button type="submit" class="btn-btn-primary" *ngIf="!showdDownButton" (click)="addUser()">Register</button>
+          <button class="btn-btn-primary" *ngIf="showdDownButton" (click)="editUser(i)">Edit</button>
+        </div>
+      </form>
     </div>
   </div>
-</div>  
-<app-users-list (sendData)="onUpdate($event)"  (sendDataForDelete)="deleteUser($event)" [users]="usersList" ></app-users-list>
+</div>
+<app-users-list (sendData)="onUpdate($event)" (sendDataForDelete)="deleteUser($event)" [users]="usersList">
+</app-users-list>
