--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
 
 
           <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
+            <button [disabled]="" type="submit" class="btn btn-primary btn-block">Login</button>
 
           </div>
         </form>
