--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,24 +1,12 @@
 <nav class="navbar ">
 
   <div class="navbar-brand">
-    <a routerLink="/dashboard" type="button" class="btn btn-secondary ">Dashboard</a>
+    <a routerLink="dashbaord">Dashboard</a>
   </div>
   <form class="form-inline"  >
-
-    <!-- <button class="btn btn-outline-light my-2 my-sm-0" type="submit">SignIn</button> -->
-    <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="button">Main button</button> -->
-
-      <a routerLink="/register" type="button" class="btn btn-secondary">SignUp</a>&nbsp;
-      <a routerLink="/login" type="button" class="btn btn-secondary">SignIn</a>&nbsp;
-      <button routerLink="/login" type="button" class="btn btn-danger">LogOut</button>&nbsp;
-
-
-
-
-
-
-
-
+      <a routerLink="register" class="btn btn-secondary">SignUp</a>
+      <a routerLink="login"  class="btn btn-secondary">SignIn</a>
+      <button (click)= "logout()" type="button" class="btn btn-danger" >LogOut</button>
   </form>
   </nav>
 
